deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gxdch-manage
  namespace: gxdch-manage
spec:
  selector:
    app: gxdch-manage
  ports:
    - name: http
      port: 8000
      targetPort: 8000
