deploy/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gxdch-manage
  namespace: infra-gateway
spec:
  parentRefs:
    - name: infra
      namespace: infra-gateway
  hostnames:
    - "manage.gxdch.dil.collab-cloud.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gxdch-manage
          namespace: gxdch-manage
          port: 8000
